--- a/音频和视频.html
+++ b/音频和视频.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <script src="../jquery.js" type="text/javascript"></script>
+    <script>
+        $(document).ready(function () {
+            // $("cricle").hover.animate({border:"5px solid gold;"},2)
+            $("cricle").click(function () {
+                $("cricle").animate({ height: "100px" });
+            });
+        });
+    </script>
 </head>
-<body>
+<style>
+    * {
+        padding: 0;
+        margin: 0;
+    }
 
+    .video {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+    }
+
+    .cricle {
+        width: 500px;
+        height: 500px;
+        border: 5px solid #9966FF;
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        border-radius: 100%;
+    }
+
+    /* .cricle:hover {
+        opacity: 1;
+        transform: rotate(45deg);
+        border: 5px solid gold;
+        /* 每隔2s换一次颜色 
+    } */
+</style>
+
+<body>
+    <!-- 设置视频封面 -->
+    <!--preload预先加载视频-->
+    <div class="cricle">
+        <video class="video" src="https://learning.dcloud.io/video/chapter_00.mp4" poster="cat.jpg" muted width="320"
+            height="300" controls loop="true"></video>
+            
+    </div>
 </body>
+
 </html>
