盒子元素可见性、元素的浮动、块级元素、行内元素、行内块级元素、盒子不可见

--- a/CSS盒模型下.html
+++ b/CSS盒模型下.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="CSS盒模型下.css">
 </head>
 <body>
-    <div>我是HTML5</div>
+    <!-- <div>我是HTML5</div>
     sssss
 
     <table border="1">
@@ -21,6 +21,24 @@
             <td>5</td>
             <td>6</td>
         </tr>
-    </table>
+    </table> -->
+    <!-- <div>我是块级元素</div>
+    sss -->
+    <!-- <span>我是行内元素</span> -->
+
+    <!-- <img src="cat.jpg" alt=""> -->
+
+    <!-- <div>我是块级元素，将要转成行内元素</div> -->
+
+    <!-- <span>我是行内元素，将要转成块级元素</span> -->
+
+    <!-- <div>我是块级元素，将要转成行内块元素</div> 
+
+    <span>我是行内元素，将要转成行内块级元素</span>
+    sss -->
+    <div id="a">我是a</div>
+    <div id="b">我是b</div>
+    <!-- <div id="c">我是c</div>
+    <div id=d>111111111</div> -->
 </body>
 </html>
