css样式，透明度

--- a/CSS表格与列表.html
+++ b/CSS表格与列表.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS表格与列表</title>
+    <link rel="stylesheet" href="CSS表格与列表.css">
 </head>
 <body>
-    
+    <table border="1">
+        <caption>人员档案</caption>
+        <tr>
+            <th>姓名</th>
+            <th>年龄</th>
+            <th>性别</th>
+        </tr>
+        <tr>
+            <td>张三</td>
+            <td class="sex">男</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>李四</td>
+            <td>女</td>
+            <td>28</td>
+        </tr>
+        <tr>
+            <td>王五</td>
+            <td>男</td>
+            <td>32</td>
+        </tr>
+    </table>
+    <ul>
+        <li>张三，是非常好都青年</li>
+        <li>李四</li>
+        <li>王五<b>2</b></li>
+        <li>赵六</li>
+    </ul>
+    <div><span>我是HTML5</span></div><br>
+
+    <em>内容简介：</em><textarea rows="10"></textarea>
 </body>
 </html>
