CSS文本效果、文本描边，文本裁剪

--- a/CSS3文本效果.html
+++ b/CSS3文本效果.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="CSS3文本效果.css">
 </head>
 <body>
-    <p>我是HTML5</p>
+    <p>我是HTML5,我是超文本标记语言</p>
 </body>
 </html>
