CSS弹性伸缩布局中

--- a/CSS3弹性伸缩布局中.html
+++ b/CSS3弹性伸缩布局中.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS3弹性伸缩布局中</title>
+    <link rel="stylesheet" href="CSS3弹性伸缩布局中.css">
 </head>
 <body>
-    
+    <div>
+        <p>自从航天技术问世以来，有潜力和基础的国家在太空探索方面都趋之如骛，对这种现象比较现实的解释，是可以通过航天技术来发展弹道导弹技术、军事情报和指挥能力、民用高技术产业等等。更重要的是，这种极限挑战可以有效提升科学和工业水平，以及优化资源配置和管理，也是攒经验升级的有效手段。</p>
+        <p>由于不同国家的经济、社会、工业发展情况有着天差地别，很难用统一标准来衡量同类宇航项目的经费投入。甚至于探测器和火箭如何抵达发射场，在不同的国家也有不同的形式，会付出不同的成本。</p>
+        <p>按照近期人民币购买力平价汇率，1美元可以兑换3.63人民币。那么如果在中国实施火星2020计划，就要花89.298亿元。当然，火星2020和天问一号的技术指标并不一样，很难简单地用上面的方式来对比。</p>
+    </div>
 </body>
 </html>
