--- a/CSS3弹性伸缩布局上.html
+++ b/CSS3弹性伸缩布局上.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS弹性伸缩布局上</title>
-    <link rel="stylesheet" href="CSS3弹性伸缩布局.css">
+    <link rel="stylesheet" href="CSS3弹性伸缩布局上.css">
 </head>
 <body>
     <div>
